# tracing-datadog-apm-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: checks.yaml
src/: datadog_client.rs  instrumentation_actix_web.rs  lib.rs  subscriber.rs
tests/: datadog_client_integration_tests.rs
