[package]
name = "tracing-datadog-apm"
version = "0.0.1"
authors = ["Kraig <kmcfadden95@gmail.com>"]
edition = "2021"

[dependencies]
actix-service = { version = "2", optional = true }
actix-web = { version = "4", optional = true }
futures = { version = "0.3", optional = true }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-core = "0.1"

[features]
actix_web = ["actix-web", "actix-service", "futures"]
